# yacinema

./: .dockerignore  .env.dev-sample  .env.dev.example  .env.prod-sample  .env.prod.example  .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml
docs/presentation/: presentation.ipynb  presentation.slides.html
envs/: .env.dev.example  .env.prod.example  .env.streaming.prod.example
files/: django_openapi.yml  postman_tests.json
movies_admin/: Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  entrypoint.dev.sh  entrypoint.prod.sh  manage.py
movies_admin/api/: urls.py
movies_admin/configs/: asgi.py  wsgi.py
movies_admin/movies/: admin.py  models.py
nginx/: Dockerfile  nginx.conf
nginx/conf.d/: site.conf
requirements/: base.txt
schema_design/: README.md  schema.sql  schema_design.py
services/movies_etl/: Dockerfile.dev  (+5 more)
services/movies_ugc/data_generator/: Dockerfile  config.py  entrypoint.sh  env.sample  pyproject.toml
services/movies_ugc/data_generator/services/: generator.py
services/movies_ugc/etl/: Dockerfile  entrypoint.sh  pyproject.toml
services/movies_ugc/etl/configs/: queries.json
services/movies_ugc/etl/services/: clickhouse_manager.py  loader.py
services_env/: .env.dev-sample  .env.dev.elasticsearch-sample  .env.dev.movies_etl-sample  .env.dev.postgres-sample  .env.prod-sample  .env.prod.movies_admin-sample
sqlite_to_postgres/: README.md  db.sqlite  load_data.py
tasks/: 01_django.md  02_docker.md  03_nginx.md
variables/: .env.dev-sample  .env.prod-sample
(+206 files in other folders)
