[tool.poetry]
name = "ugc_etl"
version = "0.1.0"
description = "ETL для переноса данных из Kafka в ClickHouse"
authors = ["Artsektor <artsektor@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
kafka-python = "2.0.2"
clickhouse-driver = "^0.2.2"
pydantic = "^1.8.2"
backoff = "^1.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
